[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
ethers-core ={ version = "2.0.10" }
ethers-etherscan = "2.0.10"
serde = { version = "1.0.188" }
worker = { version = "0.0.18", features = ["d1"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
